--- a/05images/design.css
+++ b/05images/design.css
@@ -1,3 +1,4 @@
+
 body {
    font-family: 'PT Sans', sans-serif;
     font-size:  16px; 
@@ -111,6 +112,37 @@ main address {
     width: 12.5rem;
     border: 3px solid #0442BF;
     border-radius: .5rem;
+}
+
+.myForm fieldset {
+    border: 1px solid #0442BF;
+    border-radius: 3px;
+    margin-bottom: 1rem;
+    
+}
+
+.myForm legend {
+    color: #0442BF;
+    font-size: 1rem;
+
+}
+
+.myForm label {
+    margin: .5rem;
+    
+}
+
+.myForm label, .myForm select, .myForm [type=text], .myForm [type=tel], .myForm textarea {
+    display: block;
+    
+}
+
+.myForm [type=submit] {
+    background-color: #0442BF;
+    color: #F2F0EB;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 12px;
 }
 
 
