--- a/07follow-along/styles.css
+++ b/07follow-along/styles.css
@@ -105,6 +105,8 @@ nav a:hover {
 
 
 
+
+
 /* main stuff here */
 main {
     padding: 1rem 2vw;
@@ -122,7 +124,42 @@ main h2 {
 }
 main p {
     color: #333;
-    margin: 0 0 .8rem 0;
+   /*WIDESCREENS*/
+@media only screen and (min-width: 601px) {
+   nav {
+    border-top: solid 1px #E0E6E6;
+    background-color:
+    
+}
+nav ul {
+    margin: 0;
+    padding: 0 2vw;
+    list-style-type: none;
+    display: flex;
+}
+nav a {
+    display: block;
+    padding: 1.2rem 1rem .3rem 1rem;
+    font-size: 1rem;
+    text-decoration: none;
+    color: #8C501B;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    border-bottom: solid 2px #fff;
+}
+
+nav .active a {
+    border-bottom: solid 2px #8b5022;
+}
+nav a:hover {
+    color: #000;
+}
+ 
+}
+
+
+ margin: 0 0 .8rem 0;
     line-height: 150%;
     font-size: 1.2rem;
 }
@@ -141,7 +178,7 @@ main a {
 
 
 
-}
+
 .angeloGallery {
     display: flex;
     flex-wrap: wrap;
